2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::MakeUI): Fix wrong mnemonic for menu
	item "Connect/Jump to/Page 10".

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.h, src/mainframe.cpp
	(CMainFrame::m_JumpMenuItems) (CMainFrame::OnJumpToPage)
	(CMainFrame::MakeUI): Fix unusable JumpToPage hotkeys(ALT+NUM) in
	full-screen mode.

2008-02-20  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.h
	(CMainFrame::OnFirstCon) (CMainFrame::OnLastCon): New member functions
	as callbacks for first/last connections.

	* src/mainframe.cpp
	(CMainFrame::entries): Improve connection operations.
	(MainFrame::OnFirstCon) (CMainFrame::OnLastCon): Likewise.
	Taken from
	http://into-wild.blogspot.com/2008/01/pcmanx-modification.html .

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/core/stringutil.h,
	src/core/stringutil.cpp (strncmpi): Removed.
	Replaced with strncasecmp. (confirming to POSIX.1-2001)

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/core/caret.cpp,
	src/core/termdata.cpp,
	src/core/caret.h,
	src/core/stringutil.cpp,
	src/core/site.cpp,
	src/core/termdata.h,
	src/core/font.cpp,
	src/core/stringutil.h,
	src/core/site.h: Use consistent GPL licensing terms.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/qqwryseeker/qqwryseeker.c,
	src/core/proxy.c,
	src/core/proxy.h,
	src/view/telnetcon.h,
	src/view/telnetcon.cpp,
	src/script/api.h,
	src/script/script.cpp,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/botutil.h,
	src/nancy_bot/nancybot.cpp: Use consistent GPL licensing terms.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/conn_xpm.xpm,
	src/pcmanx_inverse_xpm.xpm,
	src/pcmanx_xpm.xpm: Added "const" modifier to turn off annoying
	warnings.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* Doxygen.in: Fixlet to PROJECT_NAME since we have renamed.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnAbout): Mention Jason Xia.

	* po/zh_TW.po,